# study_buddy_app

./: .gitignore  CMakeLists.txt  README.md
example_data/: profiles.txt  sessions.txt
include/: App.h  AvailabilityManager.h  FileHandler.h  PartnerMatcher.h  ProfileManager.h  SessionScheduler.h
include/Models/: Availability.h  Session.h  Student.h
include/utils/: Color.h
src/: App.cpp  FileHandler.cpp  PartnerMatcher.cpp  ProfileManager.cpp  SessionScheduler.cpp  main.cpp
src/Models/: Availability.cpp  Session.cpp  Student.cpp
